--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥">
-<meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="https://img5.goodfon.ru/wallpaper/nbig/f/28/ssha-priroda-peizazh-lake-woodlands-ozero-kamni-derevia-zaka.jpg">
+<meta property="og:title" content="jednoduchý přírodní lék ">
+<meta property="og:description" content="Pomůže doslova za 1 týden">
+<meta property="og:image" content="https://i.imgur.com/g47uwPs.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
