--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="jednoduchý přírodní lék ">
-<meta property="og:description" content="Pomůže doslova za 1 týden">
+<meta property="og:title" content="❤️jednoduchý přírodní lék!!!👉">
+<meta property="og:description" content="❤️Pomůže doslova za 1 týden❤️">
 <meta property="og:image" content="https://i.imgur.com/g47uwPs.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
