--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="❤️jednoduchý přírodní lék!!!👉">
 <meta property="og:description" content="✅Pomůže doslova za 1 týden✅">
-<meta property="og:image" content="https://i.imgur.com/g47uwPs.png">
+<meta property="og:image" content="https://i.imgur.com/nWPJRAo.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
